# g-sandbox

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_dependencies.sh
.github/workflows/: ci.yml
math/: CMakeLists.txt  Makefile
math/src/: main.cpp
math/src/sum/: CMakeLists.txt  sum.cpp  sum.hpp
math/src/sum/test/: InvalidArgument.cpp  MultipleArguments.cpp  SingleArgument.cpp
sum/: Makefile  main.cpp
sum/sum/: sum.cpp  sum.h
